networkpolicy/pod_and_svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-1
  labels:
    project: hp
spec:
  selector:
    matchLabels:
      project: hp
  template:
    metadata:
      labels:
        project: hp
    spec:
      containers:
        - name: nginx-1
          image: nginx
          ports:
            - containerPort: 80
              name: http

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-2
  labels:
    project: dell
spec:
  selector:
    matchLabels:
      project: dell
  template:
    metadata:
      labels:
        project: dell
    spec:
      containers:
        - name: nginx-2
          image: nginx
          ports:
            - containerPort: 80

---
#Services manifest 

apiVersion: v1
kind: Service
metadata:
  name: hp-service
spec:
  selector:
    project: hp
  ports:
    - port: 81
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: dell-service
spec:
  selector:
    project: dell
  ports:
    - port: 82
      targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
